<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2026 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/performance_title">

    <SwitchPreferenceCompat
        android:key="perf_apply_on_boot"
        android:title="@string/performance_apply_on_boot_title"
        android:summary="@string/performance_apply_on_boot_summary"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="perf_cpu"
        android:title="@string/performance_cpu_title"
        android:summary="@string/performance_cpu_summary" />

    <SwitchPreferenceCompat
        android:key="perf_gpu"
        android:title="@string/performance_gpu_title"
        android:summary="@string/performance_gpu_summary" />

    <PreferenceCategory
        android:title="@string/performance_advanced_title">
        
        <Preference
            android:key="perf_advanced_toggle"
            android:title="@string/performance_advanced_title"
            android:summary="@string/performance_advanced_summary" />

        <ListPreference
            android:key="perf_gpu_oc"
            android:title="@string/gpu_overclock_title"
            android:summary="%s"
            android:entries="@array/gpu_overclock_entries"
            android:entryValues="@array/gpu_overclock_values"
            android:defaultValue="650" />

    </PreferenceCategory>

</PreferenceScreen>
